fix: Bounding box position iOS
Closes https://github.com/nonocam/nonocam/issues/1

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,9 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  height: 100%;
+  width: 100%;
+  margin: 0;
 }
 
 a {
@@ -23,4 +26,10 @@ a {
     color: white;
     background: black;
   }
+}
+
+div#__next {
+  height: 100%;
+  width: 100%;
+  margin: 0;
 }
